# rwb_hack

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  schemas.py
app/api/: routes.py
app/core/: __init__.py  action_engine.py  blending.py  decision_logic.py  explain.py  file_payloads.py  forecasting.py  kpi.py  loaders.py  preprocessing.py  service.py  slot_pressure.py  ui_dashboard.py
app/utils/: logging.py  validation.py
artifacts/configs/: blend_config.json  business_rules.yaml  model_registry.json  preprocessing.json
artifacts/references/: final_last_shot_smooth_gru_groupwise.csv  leaderboard_reference_chronos_groupwise_aggr.csv  leaderboard_reference_chronos_groupwise_main.csv  leaderboard_reference_chronos_groupwise_safe.csv  leaderboard_reference_timexer_main.csv  leaderboard_reference_timexer_safe.csv  (+5 more)
docs/: architecture.md  assumptions.md  business_logic.md  demo.md  metrics.md
examples/: demo_plan_request.json  plan_request.json  predict_request.json  test_first_100_routes.parquet
notebooks/: eda.ipynb  experiments.ipynb
scripts/: bootstrap_runtime.py  build_artifacts.py  export_chronos_artifacts.py  make_submission.py  train_cat_gru.py  train_optuna_pipeline.py  train_strong_stack.py  train_timexer.py  train_tsmixerx.py  validate_models.py
templates/: base.html  index.html
tests/: conftest.py  test_decision_logic.py  test_file_uploads.py  test_health.py  test_plan.py  test_predict.py  test_slot_pressure.py  test_ui.py
(+11 files in other folders)
